@@ -15,8 +15,8 @@ import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.node.DiscoveryNodeRole;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
+import org.elasticsearch.cluster.routing.allocation.decider.AwarenessAllocationDecider;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.collect.MapBuilder;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.unit.ByteSizeValue;
@@ -47,17 +47,22 @@ import org.junit.Before;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.Date;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.OptionalInt;
 import java.util.Set;
 import java.util.function.LongSupplier;
-import java.util.stream.Collectors;
 
+import static java.lang.Math.min;
 import static org.elasticsearch.xpack.ml.MachineLearning.MACHINE_MEMORY_NODE_ATTR;
 import static org.elasticsearch.xpack.ml.MachineLearning.MAX_JVM_SIZE_NODE_ATTR;
+import static org.elasticsearch.xpack.ml.MachineLearning.NATIVE_EXECUTABLE_CODE_OVERHEAD;
 import static org.elasticsearch.xpack.ml.job.JobNodeSelector.AWAITING_LAZY_ASSIGNMENT;
+import static org.elasticsearch.xpack.ml.utils.NativeMemoryCalculator.JVM_SIZE_KNOT_POINT;
+import static org.elasticsearch.xpack.ml.utils.NativeMemoryCalculator.STATIC_JVM_UPPER_THRESHOLD;
 import static org.hamcrest.Matchers.allOf;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
@@ -75,36 +80,55 @@ import static org.mockito.Mockito.when;
 
 public class MlAutoscalingDeciderServiceTests extends ESTestCase {
 
-    private static final long[] NODE_TIERS = new long[] {
-        1073741824L,
-        2147483648L,
-        4294967296L,
-        8589934592L,
-        17179869184L,
-        34359738368L,
-        68719476736L,
-        16106127360L,
-        32212254720L,
-        64424509440L };
+    private static final long[] NODE_TIERS_NO_MONITORING = new long[] {
+        ByteSizeValue.ofGb(1).getBytes(),
+        ByteSizeValue.ofGb(2).getBytes(),
+        ByteSizeValue.ofGb(4).getBytes(),
+        ByteSizeValue.ofGb(8).getBytes(),
+        ByteSizeValue.ofGb(16).getBytes(),
+        ByteSizeValue.ofGb(32).getBytes(),
+        ByteSizeValue.ofGb(64).getBytes(),
+        ByteSizeValue.ofGb(15).getBytes(),
+        ByteSizeValue.ofGb(30).getBytes(),
+        ByteSizeValue.ofGb(60).getBytes() };
 
-    public static final List<Tuple<Long, Long>> AUTO_NODE_TIERS = List.of(
-        Tuple.tuple(1073741824L, 432013312L), // 1GB and true JVM size
-        Tuple.tuple(2147483648L, 536870912L), // 2GB ...
-        Tuple.tuple(4294967296L, 1073741824L), // 4GB ...
-        Tuple.tuple(8589934592L, 2147483648L), // 8GB ...
-        Tuple.tuple(17179869184L, 2147483648L), // 16GB ...
-        Tuple.tuple(34359738368L, 2147483648L), // 32GB ...
-        Tuple.tuple(68719476736L, 2147483648L), // 64GB ...
-        Tuple.tuple(16106127360L, 2147483648L), // 15GB ...
-        Tuple.tuple(32212254720L, 2147483648L), // 30GB ...
-        Tuple.tuple(64424509440L, 2147483648L) // 60GB ...
-    );
+    // When monitoring is enabled Filebeat and Metricbeat are given a memory allowance of 360MB,
+    // and this is deducted from the raw node size.
+    private static final long MONITORING_ALLOWANCE_BYTES = ByteSizeValue.ofMb(360).getBytes();
 
-    private static final long DEFAULT_NODE_SIZE = ByteSizeValue.ofGb(20).getBytes();
-    private static final long DEFAULT_JVM_SIZE = ByteSizeValue.ofMb((long) (DEFAULT_NODE_SIZE * 0.25)).getBytes();
-    private static final long DEFAULT_JOB_SIZE = ByteSizeValue.ofMb(200).getBytes();
-    private static final long OVERHEAD = MachineLearning.NATIVE_EXECUTABLE_CODE_OVERHEAD.getBytes();
+    private static final long[] NODE_TIERS_WITH_MONITORING = Arrays.stream(NODE_TIERS_NO_MONITORING)
+        .map(m -> m - MONITORING_ALLOWANCE_BYTES)
+        .toArray();
+
+    private static final long BYTES_IN_4MB = ByteSizeValue.ofMb(4).getBytes();
+
+    // Must match the logic used in MachineDependentHeap.MachineNodeRole.ML_ONLY
+    // (including rounding down to a multiple of 4 megabytes before multiplying
+    // back up).
+    private static long mlOnlyNodeJvmBytes(long systemMemoryBytes) {
+        // 40% of memory up to 16GB, plus 10% of memory above that, up to an absolute maximum of 31GB
+        long unroundedBytes = (systemMemoryBytes <= JVM_SIZE_KNOT_POINT)
+            ? (long) (systemMemoryBytes * 0.4)
+            : (long) min(JVM_SIZE_KNOT_POINT * 0.4 + (systemMemoryBytes - JVM_SIZE_KNOT_POINT) * 0.1, STATIC_JVM_UPPER_THRESHOLD);
+        return (unroundedBytes / BYTES_IN_4MB) * BYTES_IN_4MB;
+    }
+
+    public static final List<Tuple<Long, Long>> AUTO_NODE_TIERS_NO_MONITORING = Arrays.stream(NODE_TIERS_NO_MONITORING)
+        .mapToObj(m -> Tuple.tuple(m, mlOnlyNodeJvmBytes(m)))
+        .toList();
+
+    public static final List<Tuple<Long, Long>> AUTO_NODE_TIERS_WITH_MONITORING = Arrays.stream(NODE_TIERS_WITH_MONITORING)
+        .mapToObj(m -> Tuple.tuple(m, mlOnlyNodeJvmBytes(m)))
+        .toList();
+
+    private static final long TEST_NODE_SIZE = ByteSizeValue.ofGb(20).getBytes();
+    private static final long ML_MEMORY_FOR_TEST_NODE_SIZE = NativeMemoryCalculator.allowedBytesForMl(TEST_NODE_SIZE, 0, true);
+    private static final long TEST_JVM_SIZE = mlOnlyNodeJvmBytes(TEST_NODE_SIZE);
+    private static final long TEST_JOB_SIZE = ByteSizeValue.ofMb(200).getBytes();
+    private static final long PER_NODE_OVERHEAD = MachineLearning.NATIVE_EXECUTABLE_CODE_OVERHEAD.getBytes();
+
     private NodeLoadDetector nodeLoadDetector;
+    private NodeAvailabilityZoneMapper nodeAvailabilityZoneMapper;
     private ClusterService clusterService;
     private Settings settings;
     private LongSupplier timeSupplier;
@@ -115,23 +139,27 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
         mlMemoryTracker = mock(MlMemoryTracker.class);
         when(mlMemoryTracker.isRecentlyRefreshed(any())).thenReturn(true);
         when(mlMemoryTracker.asyncRefresh()).thenReturn(true);
-        when(mlMemoryTracker.getAnomalyDetectorJobMemoryRequirement(any())).thenReturn(DEFAULT_JOB_SIZE);
-        when(mlMemoryTracker.getDataFrameAnalyticsJobMemoryRequirement(any())).thenReturn(DEFAULT_JOB_SIZE);
-        when(mlMemoryTracker.getTrainedModelAssignmentMemoryRequirement(any())).thenReturn(DEFAULT_JOB_SIZE);
+        when(mlMemoryTracker.getAnomalyDetectorJobMemoryRequirement(any())).thenReturn(TEST_JOB_SIZE);
+        when(mlMemoryTracker.getDataFrameAnalyticsJobMemoryRequirement(any())).thenReturn(TEST_JOB_SIZE);
+        when(mlMemoryTracker.getTrainedModelAssignmentMemoryRequirement(any())).thenReturn(TEST_JOB_SIZE);
+        when(mlMemoryTracker.getJobMemoryRequirement(any(), any())).thenReturn(TEST_JOB_SIZE);
         nodeLoadDetector = mock(NodeLoadDetector.class);
         when(nodeLoadDetector.getMlMemoryTracker()).thenReturn(mlMemoryTracker);
         when(nodeLoadDetector.detectNodeLoad(any(), any(), anyInt(), anyInt(), anyBoolean())).thenReturn(
             NodeLoad.builder("any").setUseMemory(true).incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes()).build()
         );
+        nodeAvailabilityZoneMapper = mock(NodeAvailabilityZoneMapper.class);
         clusterService = mock(ClusterService.class);
         settings = Settings.EMPTY;
         timeSupplier = System::currentTimeMillis;
         ClusterSettings cSettings = new ClusterSettings(
-            Settings.EMPTY,
+            settings,
             Set.of(
                 MachineLearning.MAX_MACHINE_MEMORY_PERCENT,
                 MachineLearning.MAX_OPEN_JOBS_PER_NODE,
-                MachineLearning.USE_AUTO_MACHINE_MEMORY_PERCENT
+                MachineLearning.USE_AUTO_MACHINE_MEMORY_PERCENT,
+                MachineLearning.MAX_ML_NODE_SIZE,
+                AwarenessAllocationDecider.CLUSTER_ROUTING_ALLOCATION_AWARENESS_ATTRIBUTE_SETTING
             )
         );
         when(clusterService.getClusterSettings()).thenReturn(cSettings);
@@ -139,17 +167,25 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
 
     public void testScalingEdgeCase() {
         // This scale up should push above 1gb, but under 2gb.
-        // The unassigned job barely doesn't fit within the current scale (by a handful of mb)
+        // The unassigned job barely doesn't fit within the current scale (by 1 megabyte - 610mb available and 611mb needed).
+        // The three assigned jobs have model memory limits 200mb, 10mb and 9mb.
+        // The unassigned job has model memory limit 128mb.
+        // Then we have four times the process overhead of 10mb, plus the per-node overhead of 30mb, so total overhead on one node is 70mb.
         when(mlMemoryTracker.getAnomalyDetectorJobMemoryRequirement(any())).thenReturn(
             ByteSizeValue.ofMb(128).getBytes() + Job.PROCESS_MEMORY_OVERHEAD.getBytes()
         );
+        when(mlMemoryTracker.getJobMemoryRequirement(any(), any())).thenReturn(
+            ByteSizeValue.ofMb(128).getBytes() + Job.PROCESS_MEMORY_OVERHEAD.getBytes()
+        );
         List<String> jobTasks = List.of("waiting_job");
+        long mlMemoryFor1GbNode = autoBytesForMl(AUTO_NODE_TIERS_NO_MONITORING.get(0).v1(), AUTO_NODE_TIERS_NO_MONITORING.get(0).v2());
         List<NodeLoad> nodesForScaleup = List.of(
             NodeLoad.builder("any")
-                .setMaxMemory(432013312)
+                .setMaxMemory(mlMemoryFor1GbNode)
                 .setUseMemory(true)
+                .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
                 .incAssignedAnomalyDetectorMemory(
-                    (long) (168.7 * 1024 + 0.5) + (long) (1.4 * 1024 * 1024 + 0.5) + ByteSizeValue.ofMb(256).getBytes()
+                    ByteSizeValue.ofMb(200).getBytes() + ByteSizeValue.ofMb(10).getBytes() + ByteSizeValue.ofMb(9).getBytes()
                         + Job.PROCESS_MEMORY_OVERHEAD.getBytes() * 3
                 )
                 .incNumAssignedJobs()
@@ -159,7 +195,10 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
         );
         MlScalingReason.Builder reasonBuilder = new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
             .setCurrentMlCapacity(
-                AutoscalingCapacity.builder().node(null, AUTO_NODE_TIERS.get(0).v1()).total(null, AUTO_NODE_TIERS.get(0).v1()).build()
+                AutoscalingCapacity.builder()
+                    .node(null, AUTO_NODE_TIERS_NO_MONITORING.get(0).v1())
+                    .total(null, AUTO_NODE_TIERS_NO_MONITORING.get(0).v1())
+                    .build()
             );
         MlAutoscalingDeciderService service = buildService();
         service.setUseAuto(true);
@@ -169,10 +208,14 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
             nodesForScaleup,
             jobTasks,
             List.of(),
-            Collections.emptyList(),
-            Collections.emptyList(),
+            List.of(),
+            List.of(),
             null,
-            new NativeMemoryCapacity(432013312, 432013312, 432013312L),
+            new NativeMemoryCapacity(
+                mlMemoryFor1GbNode - PER_NODE_OVERHEAD,
+                mlMemoryFor1GbNode - PER_NODE_OVERHEAD,
+                AUTO_NODE_TIERS_NO_MONITORING.get(0).v2()
+            ),
             reasonBuilder
         ).orElseThrow();
 
@@ -183,15 +226,15 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
 
         // Assume a scale up to 2gb nodes
         // We should NOT scale down below or to 1gb given the same jobs with 2gb node
-        long bytesForML = autoBytesForMl(AUTO_NODE_TIERS.get(1).v1(), AUTO_NODE_TIERS.get(1).v2());
+        long mlMemoryFor2GbNode = autoBytesForMl(AUTO_NODE_TIERS_NO_MONITORING.get(1).v1(), AUTO_NODE_TIERS_NO_MONITORING.get(1).v2());
         List<NodeLoad> nodeForScaleDown = List.of(
             NodeLoad.builder("any")
-                .setMaxMemory(bytesForML)
+                .setMaxMemory(mlMemoryFor2GbNode)
                 .setUseMemory(true)
+                .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
                 .incAssignedAnomalyDetectorMemory(
-                    (long) (168.7 * 1024 + 0.5) + (long) (1.4 * 1024 * 1024 + 0.5) + ByteSizeValue.ofMb(256).getBytes() + ByteSizeValue
-                        .ofMb(128)
-                        .getBytes() + Job.PROCESS_MEMORY_OVERHEAD.getBytes() * 4
+                    ByteSizeValue.ofMb(200).getBytes() + ByteSizeValue.ofMb(10).getBytes() + ByteSizeValue.ofMb(9).getBytes()
+                        + ByteSizeValue.ofMb(128).getBytes() + Job.PROCESS_MEMORY_OVERHEAD.getBytes() * 4
                 )
                 .incNumAssignedJobs()
                 .incNumAssignedJobs()
@@ -203,8 +246,8 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
             .setCurrentMlCapacity(AutoscalingCapacity.builder().node(null, 2147483648L).total(null, 2147483648L).build());
         AutoscalingDeciderResult result = service.checkForScaleDown(
             nodeForScaleDown,
-            ByteSizeValue.ofMb(256).getBytes() + Job.PROCESS_MEMORY_OVERHEAD.getBytes(),
-            new NativeMemoryCapacity(bytesForML, bytesForML, 536870912L),
+            ByteSizeValue.ofMb(200).getBytes() + Job.PROCESS_MEMORY_OVERHEAD.getBytes(),
+            new NativeMemoryCapacity(mlMemoryFor2GbNode, mlMemoryFor2GbNode, AUTO_NODE_TIERS_NO_MONITORING.get(1).v2()),
             reasonBuilder
         ).orElseThrow();
         assertThat(
@@ -215,23 +258,36 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
 
     public void testScaleStability() {
         for (int i = 0; i < 10; i++) {
-            for (int tier = 0; tier < AUTO_NODE_TIERS.size() - 1; tier++) {
-                Tuple<Long, Long> lowerTier = AUTO_NODE_TIERS.get(tier);
-                final long memoryForMl = autoBytesForMl(lowerTier.v1(), lowerTier.v2());
-                Tuple<Long, Long> upperTier = AUTO_NODE_TIERS.get(tier + 1);
+            // Run this test with the Cloud node sizes we get when monitoring is not enabled and when monitoring is enabled
+            final long[] nodeTiers;
+            final List<Tuple<Long, Long>> autoNodeTiers;
+            if ((i % 2) == 0) {
+                nodeTiers = NODE_TIERS_NO_MONITORING;
+                autoNodeTiers = AUTO_NODE_TIERS_NO_MONITORING;
+            } else {
+                nodeTiers = NODE_TIERS_WITH_MONITORING;
+                autoNodeTiers = AUTO_NODE_TIERS_WITH_MONITORING;
+            }
+            for (int tier = 0; tier < autoNodeTiers.size() - 1; tier++) {
+                final Tuple<Long, Long> lowerTier = autoNodeTiers.get(tier);
+                final long lowerTierNodeSize = lowerTier.v1();
+                final long lowerTierJvmSize = lowerTier.v2();
+                final long lowerTierMemoryForMl = autoBytesForMl(lowerTierNodeSize, lowerTierJvmSize);
+                final Tuple<Long, Long> higherTier = autoNodeTiers.get(tier + 1);
                 // The jobs that currently exist, to use in the scaleUp call
-                NodeLoad.Builder forScaleUp = new NodeLoad.Builder("any").setMaxMemory(memoryForMl)
+                NodeLoad.Builder forScaleUp = new NodeLoad.Builder("any").setMaxMemory(lowerTierMemoryForMl)
                     .setMaxJobs(Integer.MAX_VALUE)
                     .setUseMemory(true);
                 // The jobs + load that exists for all jobs (after scale up), used in scaleDown call
-                NodeLoad.Builder forScaleDown = new NodeLoad.Builder("any").setMaxMemory(autoBytesForMl(upperTier.v1(), upperTier.v2()))
+                final long higherTierMemoryForMl = autoBytesForMl(higherTier.v1(), higherTier.v2());
+                NodeLoad.Builder forScaleDown = new NodeLoad.Builder("any").setMaxMemory(higherTierMemoryForMl)
                     .setMaxJobs(Integer.MAX_VALUE)
                     .setUseMemory(true);
-                long maxJob = 0;
+                long maxJobSize = 0;
                 // Fill with existing tier jobs
                 while (forScaleUp.getFreeMemory() > Job.PROCESS_MEMORY_OVERHEAD.getBytes()) {
                     long jobSize = randomLongBetween(Job.PROCESS_MEMORY_OVERHEAD.getBytes(), forScaleUp.getFreeMemory());
-                    maxJob = Math.max(jobSize, maxJob);
+                    maxJobSize = Math.max(jobSize, maxJobSize);
                     forScaleUp.incNumAssignedJobs().incAssignedAnomalyDetectorMemory(jobSize);
                     forScaleDown.incNumAssignedJobs().incAssignedAnomalyDetectorMemory(jobSize);
                 }
@@ -240,13 +296,11 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 List<String> waitingJobs = new ArrayList<>();
                 while (forScaleDown.getFreeMemory() > Job.PROCESS_MEMORY_OVERHEAD.getBytes()) {
                     long jobSize = randomLongBetween(Job.PROCESS_MEMORY_OVERHEAD.getBytes(), forScaleDown.getFreeMemory());
-                    if (forScaleDown.getFreeMemory() - jobSize <= 0) {
-                        break;
-                    }
-                    maxJob = Math.max(jobSize, maxJob);
+                    maxJobSize = Math.max(jobSize, maxJobSize);
                     forScaleDown.incNumAssignedJobs().incAssignedAnomalyDetectorMemory(jobSize);
                     String waitingJob = randomAlphaOfLength(10);
                     when(mlMemoryTracker.getAnomalyDetectorJobMemoryRequirement(eq(waitingJob))).thenReturn(jobSize);
+                    when(mlMemoryTracker.getJobMemoryRequirement(eq(MlTasks.JOB_TASK_NAME), eq(waitingJob))).thenReturn(jobSize);
                     waitingJobs.add(waitingJob);
                 }
                 MlAutoscalingDeciderService service = buildService();
@@ -258,42 +312,51 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                     List.of(nodeLoadForScaleUp),
                     waitingJobs,
                     List.of(),
-                    Collections.emptyList(),
-                    Collections.emptyList(),
+                    List.of(),
+                    List.of(),
                     null,
-                    new NativeMemoryCapacity(memoryForMl, memoryForMl, lowerTier.v2()),
+                    new NativeMemoryCapacity(lowerTierMemoryForMl, lowerTierMemoryForMl, lowerTierJvmSize),
                     new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
-                        .setCurrentMlCapacity(AutoscalingCapacity.builder().node(null, lowerTier.v1()).total(null, lowerTier.v1()).build())
+                        .setCurrentMlCapacity(
+                            AutoscalingCapacity.builder().node(null, lowerTierNodeSize).total(null, lowerTierNodeSize).build()
+                        )
                 ).orElseThrow();
 
-                assertThat(scaleUpResult.requiredCapacity().total().memory().getBytes(), greaterThan(lowerTier.v1()));
-                assertThat(scaleUpResult.requiredCapacity().node().memory().getBytes(), greaterThanOrEqualTo(lowerTier.v1()));
                 AutoscalingCapacity requiredScaleUp = scaleUpResult.requiredCapacity();
-                // Its possible that the next tier is above what we consider "upperTier"
+                long scaledUpTierSizeRequested = requiredScaleUp.total().memory().getBytes();
+                assertThat(scaledUpTierSizeRequested, greaterThan(lowerTierNodeSize));
+                assertThat(requiredScaleUp.node().memory().getBytes(), greaterThanOrEqualTo(lowerTierNodeSize));
+                // It's possible that the next tier is above what we consider "higherTier"
                 // This is just fine for this test, as long as scale_down does not drop below this tier
-                int nextTier = Arrays.binarySearch(NODE_TIERS, requiredScaleUp.total().memory().getBytes());
+                int nextTier = Arrays.binarySearch(nodeTiers, scaledUpTierSizeRequested);
                 if (nextTier < 0) {
                     nextTier = -nextTier - 1;
                 }
-                // Its possible we requested a huge scale up, this is OK, we just don't have validation numbers that exist past a certain
-                // point.
-                if (nextTier >= NODE_TIERS.length) {
-                    return;
+                // It's possible we requested a huge scale up, this is OK, we just don't have validation
+                // numbers that exist past a certain point.
+                if (nextTier >= nodeTiers.length) {
+                    // Start the next iteration of the outermost loop
+                    break;
                 }
-                long size = NODE_TIERS[nextTier];
-                long scaledBytesForMl = autoBytesForMl(size, AUTO_NODE_TIERS.get(nextTier).v2());
+                // Actual scaled up size will likely be bigger than what we asked for
+                long scaledUpSize = nodeTiers[nextTier];
+                assertThat(scaledUpSize, greaterThanOrEqualTo(scaledUpTierSizeRequested));
+                long scaledUpJvmSize = autoNodeTiers.get(nextTier).v2();
+                long scaledUpBytesForMl = autoBytesForMl(scaledUpSize, scaledUpJvmSize);
+                NodeLoad nodeLoadForScaleDown = forScaleDown.build();
                 // It could be that scale down doesn't occur, this is fine as we are "perfectly scaled"
                 Optional<AutoscalingDeciderResult> result = service.checkForScaleDown(
-                    List.of(forScaleDown.build()),
-                    maxJob,
-                    new NativeMemoryCapacity(scaledBytesForMl, scaledBytesForMl, AUTO_NODE_TIERS.get(nextTier).v2()),
+                    List.of(nodeLoadForScaleDown),
+                    maxJobSize,
+                    new NativeMemoryCapacity(scaledUpBytesForMl, scaledUpBytesForMl, scaledUpJvmSize),
                     new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
-                        .setCurrentMlCapacity(AutoscalingCapacity.builder().node(null, size).total(null, size).build())
+                        .setCurrentMlCapacity(AutoscalingCapacity.builder().node(null, scaledUpSize).total(null, scaledUpSize).build())
                 );
                 // If scale down is present, we don't want to drop below our current tier.
                 // If we do, that means that for the same jobs we scaled with, we calculated something incorrectly.
                 if (result.isPresent()) {
-                    int afterScaleDownTier = Arrays.binarySearch(NODE_TIERS, result.get().requiredCapacity().total().memory().getBytes());
+                    long tierSizeRequired = result.get().requiredCapacity().total().memory().getBytes();
+                    int afterScaleDownTier = Arrays.binarySearch(nodeTiers, tierSizeRequired);
                     if (afterScaleDownTier < 0) {
                         afterScaleDownTier = -afterScaleDownTier - 1;
                     }
@@ -321,11 +384,11 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
             service.checkForScaleUp(
                 0,
                 0,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                Collections.emptyList(),
-                Collections.emptyList(),
-                Collections.emptyList(),
+                List.of(),
+                List.of(),
+                List.of(),
+                List.of(),
+                List.of(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 MlScalingReason.builder()
@@ -338,15 +401,25 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
         ByteSizeValue anomalyDetectorJobSize = ByteSizeValue.ofGb(randomIntBetween(2, 4));
         ByteSizeValue analyticsJobSize = ByteSizeValue.ofGb(randomIntBetween(2, 4));
         when(mlMemoryTracker.getAnomalyDetectorJobMemoryRequirement(any())).thenReturn(anomalyDetectorJobSize.getBytes());
+        when(mlMemoryTracker.getJobMemoryRequirement(eq(MlTasks.JOB_TASK_NAME), any())).thenReturn(anomalyDetectorJobSize.getBytes());
         when(mlMemoryTracker.getDataFrameAnalyticsJobMemoryRequirement(any())).thenReturn(analyticsJobSize.getBytes());
-        List<String> jobTasks = Arrays.asList("waiting_job", "waiting_job_2");
-        List<String> analytics = Arrays.asList("analytics_waiting");
-        List<NodeLoad> fullyLoadedNode = Arrays.asList(
+        when(mlMemoryTracker.getJobMemoryRequirement(eq(MlTasks.DATA_FRAME_ANALYTICS_TASK_NAME), any())).thenReturn(
+            analyticsJobSize.getBytes()
+        );
+        List<String> jobTasks = List.of("waiting_job", "waiting_job_2");
+        List<String> analytics = List.of("analytics_waiting");
+        List<NodeLoad> fullyLoadedNode = List.of(
             NodeLoad.builder("any")
-                .setMaxMemory(ByteSizeValue.ofGb(1).getBytes())
+                .setMaxMemory(anomalyDetectorJobSize.getBytes() + PER_NODE_OVERHEAD)
                 .setUseMemory(true)
-                .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes())
+                .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                .incAssignedAnomalyDetectorMemory(anomalyDetectorJobSize.getBytes())
+                .incNumAssignedJobs()
                 .build()
+        );
+        NativeMemoryCapacity currentScale = new NativeMemoryCapacity(
+            anomalyDetectorJobSize.getBytes() + PER_NODE_OVERHEAD,
+            anomalyDetectorJobSize.getBytes() + PER_NODE_OVERHEAD
         );
         MlScalingReason.Builder reasonBuilder = new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
             .setCurrentMlCapacity(AutoscalingCapacity.ZERO);
@@ -358,34 +431,34 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 0,
                 fullyLoadedNode,
                 jobTasks,
-                Collections.emptyList(),
+                List.of(),
                 analytics,
-                Collections.emptyList(),
+                List.of(),
                 null,
-                NativeMemoryCapacity.ZERO,
+                currentScale,
                 reasonBuilder
             );
             assertFalse(decision.isEmpty());
             AutoscalingDeciderResult result = decision.get();
             long allowedBytesForMlNode = NativeMemoryCalculator.allowedBytesForMl(
                 result.requiredCapacity().node().memory().getBytes(),
-                30,
+                randomIntBetween(5, 90), // irrelevant because auto is true
                 true
             );
-            // Note: with more than 1 job involved this calculation can be a wild overestimate, because
-            // NativeMemoryCapacity.autoscalingCapacity() is assuming the memory percent is the same regardless of node size
+            // Note: with more than 1 job involved this calculation could be a wild overestimate. We get away
+            // with it here because all the jobs fit on one node. This is not how the production code works.
             long allowedBytesForMlTier = NativeMemoryCalculator.allowedBytesForMl(
                 result.requiredCapacity().total().memory().getBytes(),
-                30,
+                randomIntBetween(5, 90), // irrelevant because auto is true
                 true
             );
             assertThat(
                 allowedBytesForMlNode,
-                greaterThanOrEqualTo(Math.max(anomalyDetectorJobSize.getBytes(), analyticsJobSize.getBytes()) + OVERHEAD)
+                greaterThanOrEqualTo(Math.max(anomalyDetectorJobSize.getBytes(), analyticsJobSize.getBytes()) + PER_NODE_OVERHEAD)
             );
             assertThat(
                 allowedBytesForMlTier,
-                greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() * 2 + analyticsJobSize.getBytes() + OVERHEAD)
+                greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() * 3 + analyticsJobSize.getBytes() + PER_NODE_OVERHEAD)
             );
         }
         { // we allow one job in the analytics queue
@@ -394,29 +467,29 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 1,
                 fullyLoadedNode,
                 jobTasks,
-                Collections.emptyList(),
+                List.of(),
                 analytics,
-                Collections.emptyList(),
+                List.of(),
                 null,
-                NativeMemoryCapacity.ZERO,
+                currentScale,
                 reasonBuilder
             );
             assertFalse(decision.isEmpty());
             AutoscalingDeciderResult result = decision.get();
             long allowedBytesForMlNode = NativeMemoryCalculator.allowedBytesForMl(
                 result.requiredCapacity().node().memory().getBytes(),
-                30,
+                randomIntBetween(5, 90), // irrelevant because auto is true
                 true
             );
-            // Note: with more than 1 job involved this calculation can be a wild overestimate, because
-            // NativeMemoryCapacity.autoscalingCapacity() is assuming the memory percent is the same regardless of node size
+            // Note: with more than 1 job involved this calculation could be a wild overestimate. We get away
+            // with it here because all the jobs fit on one node. This is not how the production code works.
             long allowedBytesForMlTier = NativeMemoryCalculator.allowedBytesForMl(
                 result.requiredCapacity().total().memory().getBytes(),
-                30,
+                randomIntBetween(5, 90), // irrelevant because auto is true
                 true
             );
-            assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + OVERHEAD));
-            assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() * 2 + OVERHEAD));
+            assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + PER_NODE_OVERHEAD));
+            assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() * 3 + PER_NODE_OVERHEAD));
         }
         { // we allow one job in the anomaly queue and analytics queue
             Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
@@ -424,29 +497,29 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 1,
                 fullyLoadedNode,
                 jobTasks,
-                Collections.emptyList(),
+                List.of(),
                 analytics,
-                Collections.emptyList(),
+                List.of(),
                 null,
-                NativeMemoryCapacity.ZERO,
+                currentScale,
                 reasonBuilder
             );
             assertFalse(decision.isEmpty());
             AutoscalingDeciderResult result = decision.get();
             long allowedBytesForMlNode = NativeMemoryCalculator.allowedBytesForMl(
                 result.requiredCapacity().node().memory().getBytes(),
-                30,
+                randomIntBetween(5, 90), // irrelevant because auto is true
                 true
             );
-            // Note: with more than 1 job involved this calculation can be a wild overestimate, because
-            // NativeMemoryCapacity.autoscalingCapacity() is assuming the memory percent is the same regardless of node size
+            // Note: with more than 1 job involved this calculation could be a wild overestimate. We get away
+            // with it here because all the jobs fit on one node. This is not how the production code works.
             long allowedBytesForMlTier = NativeMemoryCalculator.allowedBytesForMl(
                 result.requiredCapacity().total().memory().getBytes(),
-                30,
+                randomIntBetween(5, 90), // irrelevant because auto is true
                 true
             );
-            assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + OVERHEAD));
-            assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + OVERHEAD));
+            assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + PER_NODE_OVERHEAD));
+            assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() * 2 + PER_NODE_OVERHEAD));
         }
     }
 
@@ -454,13 +527,19 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
         ByteSizeValue anomalyDetectorJobSize = ByteSizeValue.ofGb(randomIntBetween(2, 8));
         ByteSizeValue analyticsJobSize = ByteSizeValue.ofGb(randomIntBetween(2, 8));
         when(mlMemoryTracker.getAnomalyDetectorJobMemoryRequirement(any())).thenReturn(anomalyDetectorJobSize.getBytes());
+        when(mlMemoryTracker.getJobMemoryRequirement(eq(MlTasks.JOB_TASK_NAME), any())).thenReturn(anomalyDetectorJobSize.getBytes());
         when(mlMemoryTracker.getDataFrameAnalyticsJobMemoryRequirement(any())).thenReturn(analyticsJobSize.getBytes());
-        List<String> snapshotUpgradeTasks = Arrays.asList("waiting_upgrade", "waiting_upgrade_2");
-        List<NodeLoad> fullyLoadedNode = Arrays.asList(
+        when(mlMemoryTracker.getJobMemoryRequirement(eq(MlTasks.DATA_FRAME_ANALYTICS_TASK_NAME), any())).thenReturn(
+            analyticsJobSize.getBytes()
+        );
+        List<String> snapshotUpgradeTasks = List.of("waiting_upgrade", "waiting_upgrade_2");
+        List<NodeLoad> fullyLoadedNode = List.of(
             NodeLoad.builder("any")
-                .setMaxMemory(ByteSizeValue.ofGb(1).getBytes())
+                .setMaxMemory(ByteSizeValue.ofGb(1).getBytes() + PER_NODE_OVERHEAD)
                 .setUseMemory(true)
+                .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
                 .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes())
+                .incNumAssignedJobs()
                 .build()
         );
         MlScalingReason.Builder reasonBuilder = new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
@@ -472,10 +551,10 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 0,
                 0,
                 fullyLoadedNode,
-                Collections.emptyList(),
+                List.of(),
                 snapshotUpgradeTasks,
-                Collections.emptyList(),
-                Collections.emptyList(),
+                List.of(),
+                List.of(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder
@@ -487,25 +566,25 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 30,
                 true
             );
-            // Note: with more than 1 job involved this calculation can be a wild overestimate, because
-            // NativeMemoryCapacity.autoscalingCapacity() is assuming the memory percent is the same regardless of node size
+            // Note: with more than 1 job involved this calculation could be a wild overestimate. We get away
+            // with it here because all the jobs fit on one node. This is not how the production code works.
             long allowedBytesForMlTier = NativeMemoryCalculator.allowedBytesForMl(
                 result.requiredCapacity().total().memory().getBytes(),
                 30,
                 true
             );
-            assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + OVERHEAD));
-            assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() * 2 + OVERHEAD));
+            assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + PER_NODE_OVERHEAD));
+            assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() * 2 + PER_NODE_OVERHEAD));
         }
         { // we allow one job in the analytics queue
             Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
                 0,
                 1,
                 fullyLoadedNode,
-                Collections.emptyList(),
+                List.of(),
                 snapshotUpgradeTasks,
-                Collections.emptyList(),
-                Collections.emptyList(),
+                List.of(),
+                List.of(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder
@@ -517,25 +596,25 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 30,
                 true
             );
-            // Note: with more than 1 job involved this calculation can be a wild overestimate, because
-            // NativeMemoryCapacity.autoscalingCapacity() is assuming the memory percent is the same regardless of node size
+            // Note: with more than 1 job involved this calculation could be a wild overestimate. We get away
+            // with it here because all the jobs fit on one node. This is not how the production code works.
             long allowedBytesForMlTier = NativeMemoryCalculator.allowedBytesForMl(
                 result.requiredCapacity().total().memory().getBytes(),
                 30,
                 true
             );
-            assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + OVERHEAD));
-            assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() * 2 + OVERHEAD));
+            assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + PER_NODE_OVERHEAD));
+            assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() * 2 + PER_NODE_OVERHEAD));
         }
         { // we allow one job in the anomaly queue and analytics queue
             Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
                 1,
                 1,
                 fullyLoadedNode,
-                Collections.emptyList(),
+                List.of(),
                 snapshotUpgradeTasks,
-                Collections.emptyList(),
-                Collections.emptyList(),
+                List.of(),
+                List.of(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder
@@ -547,32 +626,33 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 30,
                 true
             );
-            // Note: with more than 1 job involved this calculation can be a wild overestimate, because
-            // NativeMemoryCapacity.autoscalingCapacity() is assuming the memory percent is the same regardless of node size
+            // Note: with more than 1 job involved this calculation could be a wild overestimate. We get away
+            // with it here because all the jobs fit on one node. This is not how the production code works.
             long allowedBytesForMlTier = NativeMemoryCalculator.allowedBytesForMl(
                 result.requiredCapacity().total().memory().getBytes(),
                 30,
                 true
             );
-            assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + OVERHEAD));
-            assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + OVERHEAD));
+            assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + PER_NODE_OVERHEAD));
+            assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(anomalyDetectorJobSize.getBytes() + PER_NODE_OVERHEAD));
         }
     }
 
     public void testScaleUp_withWaitingJobsAndRoomInNodes() {
-        List<String> jobTasks = Arrays.asList("waiting_job", "waiting_job_2");
-        List<String> analytics = Arrays.asList("analytics_waiting");
+        List<String> jobTasks = List.of("waiting_job", "waiting_job_2");
+        List<String> analytics = List.of("analytics_waiting");
         MlScalingReason.Builder reasonBuilder = new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
             .setCurrentMlCapacity(AutoscalingCapacity.ZERO);
-        List<NodeLoad> nodesWithRoom = Arrays.asList(
+        List<NodeLoad> nodesWithRoom = List.of(
             NodeLoad.builder("partially_filled")
-                .setMaxMemory(ByteSizeValue.ofMb(430).getBytes())
+                .setMaxMemory(2 * TEST_JOB_SIZE + PER_NODE_OVERHEAD)
                 .setUseMemory(true)
                 .setMaxJobs(10)
+                .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                .incAssignedAnomalyDetectorMemory(TEST_JOB_SIZE)
                 .incNumAssignedJobs()
-                .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofMb(230).getBytes())
                 .build(),
-            NodeLoad.builder("not_filled").setMaxMemory(ByteSizeValue.ofMb(230).getBytes()).setMaxJobs(10).setUseMemory(true).build()
+            NodeLoad.builder("not_filled").setMaxMemory(TEST_JOB_SIZE + PER_NODE_OVERHEAD).setMaxJobs(10).setUseMemory(true).build()
         );
         MlAutoscalingDeciderService service = buildService();
         service.setMaxMachineMemoryPercent(25);
@@ -582,16 +662,16 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 0,
                 nodesWithRoom,
                 jobTasks,
-                Collections.emptyList(),
+                List.of(),
                 analytics,
-                Collections.emptyList(),
+                List.of(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder
             );
             assertTrue(decision.isPresent());
-            assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo((DEFAULT_JOB_SIZE + OVERHEAD) * 4));
-            assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(4 * (DEFAULT_JOB_SIZE + OVERHEAD)));
+            assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo((TEST_JOB_SIZE + PER_NODE_OVERHEAD) * 4));
+            assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(4 * (TEST_JOB_SIZE + PER_NODE_OVERHEAD)));
         }
         { // we allow one job in the analytics queue
             Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
@@ -599,9 +679,9 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 1,
                 nodesWithRoom,
                 jobTasks,
-                Collections.emptyList(),
+                List.of(),
                 analytics,
-                Collections.emptyList(),
+                List.of(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder
@@ -614,9 +694,9 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 0,
                 nodesWithRoom,
                 jobTasks,
-                Collections.emptyList(),
+                List.of(),
                 analytics,
-                Collections.emptyList(),
+                List.of(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder
@@ -626,15 +706,17 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
     }
 
     public void testScaleUp_withWaitingJobsAndNoRoomInNodes() {
-        List<String> jobTasks = Arrays.asList("waiting_job", "waiting_job_2");
-        List<String> analytics = Arrays.asList("analytics_waiting");
+        List<String> jobTasks = List.of("waiting_job", "waiting_job_2");
+        List<String> analytics = List.of("analytics_waiting");
         MlScalingReason.Builder reasonBuilder = new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
             .setCurrentMlCapacity(AutoscalingCapacity.ZERO);
-        List<NodeLoad> fullyLoadedNode = Arrays.asList(
+        List<NodeLoad> fullyLoadedNode = List.of(
             NodeLoad.builder("any")
-                .setMaxMemory(ByteSizeValue.ofGb(1).getBytes())
+                .setMaxMemory(ByteSizeValue.ofGb(1).getBytes() + PER_NODE_OVERHEAD)
                 .setUseMemory(true)
+                .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
                 .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes())
+                .incNumAssignedJobs()
                 .build()
         );
         MlAutoscalingDeciderService service = buildService();
@@ -645,16 +727,16 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 0,
                 fullyLoadedNode,
                 jobTasks,
-                Collections.emptyList(),
+                List.of(),
                 analytics,
-                Collections.emptyList(),
+                List.of(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder
             );
             assertFalse(decision.isEmpty());
-            assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo((DEFAULT_JOB_SIZE + OVERHEAD) * 4));
-            assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(4 * (3 * DEFAULT_JOB_SIZE + OVERHEAD)));
+            assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo((TEST_JOB_SIZE + PER_NODE_OVERHEAD) * 4));
+            assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(4 * (3 * TEST_JOB_SIZE + PER_NODE_OVERHEAD)));
         }
         { // we allow one job in the analytics queue
             Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
@@ -662,16 +744,16 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 1,
                 fullyLoadedNode,
                 jobTasks,
-                Collections.emptyList(),
+                List.of(),
                 analytics,
-                Collections.emptyList(),
+                List.of(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder
             );
             assertFalse(decision.isEmpty());
-            assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo(4 * (DEFAULT_JOB_SIZE + OVERHEAD)));
-            assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(4 * (2 * DEFAULT_JOB_SIZE + OVERHEAD)));
+            assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo(4 * (TEST_JOB_SIZE + PER_NODE_OVERHEAD)));
+            assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(4 * (2 * TEST_JOB_SIZE + PER_NODE_OVERHEAD)));
         }
         { // we allow one job in the anomaly queue and analytics queue
             Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
@@ -679,91 +761,99 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 1,
                 fullyLoadedNode,
                 jobTasks,
-                Collections.emptyList(),
+                List.of(),
                 analytics,
-                Collections.emptyList(),
+                List.of(),
                 null,
                 NativeMemoryCapacity.ZERO,
                 reasonBuilder
             );
             assertFalse(decision.isEmpty());
-            assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo(4 * (DEFAULT_JOB_SIZE + OVERHEAD)));
-            assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(4 * (DEFAULT_JOB_SIZE + OVERHEAD)));
+            assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo(4 * (TEST_JOB_SIZE + PER_NODE_OVERHEAD)));
+            assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(4 * (TEST_JOB_SIZE + PER_NODE_OVERHEAD)));
         }
     }
 
     public void testScaleUp_withWaitingJobs_WithFutureCapacity() {
-        List<String> jobTasks = Arrays.asList("waiting_job", "waiting_job_2");
-        List<String> analytics = Arrays.asList("analytics_waiting");
+        List<String> jobTasks = List.of("waiting_job", "waiting_job_2");
+        List<String> analytics = List.of("analytics_waiting");
         MlScalingReason.Builder reasonBuilder = new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
             .setCurrentMlCapacity(AutoscalingCapacity.ZERO);
-        List<NodeLoad> fullyLoadedNode = Arrays.asList(
+        List<NodeLoad> fullyLoadedNode = List.of(
             NodeLoad.builder("any")
                 .setMaxMemory(ByteSizeValue.ofGb(1).getBytes())
                 .setUseMemory(true)
-                .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes())
+                .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes() - PER_NODE_OVERHEAD)
+                .incNumAssignedJobs()
                 .build()
+        );
+        NativeMemoryCapacity fullyLoadedNodeCurrentScale = new NativeMemoryCapacity(
+            ByteSizeValue.ofGb(1).getBytes() - PER_NODE_OVERHEAD,
+            ByteSizeValue.ofGb(1).getBytes() - PER_NODE_OVERHEAD
         );
         MlAutoscalingDeciderService service = buildService();
         service.setMaxMachineMemoryPercent(25);
-        { // with null future capacity and current capacity has a small node
+        { // with null future capacity and current capacity is full
             Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
                 2,
                 1,
                 fullyLoadedNode,
                 jobTasks,
-                Collections.emptyList(),
+                List.of(),
                 analytics,
-                Collections.emptyList(),
+                List.of(),
                 null,
+                fullyLoadedNodeCurrentScale,
+                reasonBuilder
+            );
+            assertTrue(decision.isEmpty()); // means "don't know" in this case
+        }
+        { // current capacity is full but the existing job is expected to terminate and free up all its resources
+            Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
+                2,
+                1,
+                fullyLoadedNode,
+                jobTasks,
+                List.of(),
+                analytics,
+                List.of(),
+                fullyLoadedNodeCurrentScale,
+                fullyLoadedNodeCurrentScale,
+                reasonBuilder
+            );
+            assertTrue(decision.isEmpty()); // means "OK to wait for future capacity"
+        }
+        { // with no future capacity (i.e. current jobs expected to run forever) and current capacity is full
+            Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
+                2,
+                1,
+                fullyLoadedNode,
+                jobTasks,
+                List.of(),
+                analytics,
+                List.of(),
                 NativeMemoryCapacity.ZERO,
+                fullyLoadedNodeCurrentScale,
                 reasonBuilder
             );
             assertFalse(decision.isEmpty());
-            assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo(DEFAULT_JOB_SIZE * 4));
-            assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(DEFAULT_JOB_SIZE * 4));
-        }
-        {
-            Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
-                2,
-                1,
-                fullyLoadedNode,
-                jobTasks,
-                Collections.emptyList(),
-                analytics,
-                Collections.emptyList(),
-                new NativeMemoryCapacity(ByteSizeValue.ofGb(3).getBytes(), ByteSizeValue.ofGb(1).getBytes()),
-                new NativeMemoryCapacity(ByteSizeValue.ofGb(2).getBytes(), ByteSizeValue.ofGb(2).getBytes()),
-                reasonBuilder
-            );
-            assertTrue(decision.isEmpty());
-        }
-        {
-            Optional<AutoscalingDeciderResult> decision = service.checkForScaleUp(
-                2,
-                1,
-                fullyLoadedNode,
-                jobTasks,
-                Collections.emptyList(),
-                analytics,
-                Collections.emptyList(),
-                new NativeMemoryCapacity(ByteSizeValue.ofMb(1).getBytes(), ByteSizeValue.ofMb(1).getBytes()),
-                new NativeMemoryCapacity(ByteSizeValue.ofGb(2).getBytes(), ByteSizeValue.ofGb(2).getBytes()),
-                reasonBuilder
-            );
-            assertFalse(decision.isEmpty());
-            assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo(ByteSizeValue.ofGb(8).getBytes()));
-            assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(ByteSizeValue.ofMb(8992).getBytes()));
+            assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo(ByteSizeValue.ofGb(4).getBytes()));
+            // For the tier we'll need enough for the current 1GB of usage plus 3 new 200MB jobs,
+            // so with 25% ML memory percent we need 4 * 1624MB
+            assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(ByteSizeValue.ofMb(6496).getBytes()));
         }
     }
 
     public void testScaleUp_withWaitingModelAndAutoMemoryAndNoRoomInNodes() {
         when(mlMemoryTracker.getTrainedModelAssignmentMemoryRequirement(any())).thenReturn(ByteSizeValue.ofGb(2).getBytes());
-        List<NodeLoad> fullyLoadedNode = Arrays.asList(
+        List<NodeLoad> fullyLoadedNode = List.of(
             NodeLoad.builder("any")
-                .setMaxMemory(ByteSizeValue.ofGb(1).getBytes())
+                .setMaxMemory(ByteSizeValue.ofGb(1).getBytes() + PER_NODE_OVERHEAD)
                 .setUseMemory(true)
+                .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
                 .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes())
+                .incNumAssignedJobs()
                 .build()
         );
         MlScalingReason.Builder reasonBuilder = new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
@@ -774,9 +864,9 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
             0,
             0,
             fullyLoadedNode,
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
+            List.of(),
+            List.of(),
+            List.of(),
             List.of("foo"),
             null,
             NativeMemoryCapacity.ZERO,
@@ -789,29 +879,30 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
             30,
             true
         );
-        // Note: with more than 1 job involved this calculation can be a wild overestimate, because
-        // NativeMemoryCapacity.autoscalingCapacity() is assuming the memory percent is the same regardless of node size
+        // Note: with more than 1 job involved this calculation could be a wild overestimate. We get away
+        // with it here because all the jobs fit on one node. This is not how the production code works.
         long allowedBytesForMlTier = NativeMemoryCalculator.allowedBytesForMl(
             result.requiredCapacity().total().memory().getBytes(),
             30,
             true
         );
-        assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(ByteSizeValue.ofGb(2).getBytes() + OVERHEAD));
-        assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(ByteSizeValue.ofGb(2).getBytes() + OVERHEAD));
+        assertThat(allowedBytesForMlNode, greaterThanOrEqualTo(ByteSizeValue.ofGb(2).getBytes() + PER_NODE_OVERHEAD));
+        assertThat(allowedBytesForMlTier, greaterThanOrEqualTo(ByteSizeValue.ofGb(2).getBytes() + PER_NODE_OVERHEAD));
     }
 
     public void testScaleUp_withWaitingModelsAndRoomInNodes() {
         MlScalingReason.Builder reasonBuilder = new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
             .setCurrentMlCapacity(AutoscalingCapacity.ZERO);
-        List<NodeLoad> nodesWithRoom = Arrays.asList(
+        List<NodeLoad> nodesWithRoom = List.of(
             NodeLoad.builder("partially_filled")
-                .setMaxMemory(ByteSizeValue.ofMb(430).getBytes())
+                .setMaxMemory(2 * TEST_JOB_SIZE + PER_NODE_OVERHEAD)
                 .setUseMemory(true)
                 .setMaxJobs(10)
+                .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                .incAssignedAnomalyDetectorMemory(TEST_JOB_SIZE)
                 .incNumAssignedJobs()
-                .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofMb(230).getBytes())
                 .build(),
-            NodeLoad.builder("not_filled").setMaxMemory(ByteSizeValue.ofMb(230).getBytes()).setMaxJobs(10).setUseMemory(true).build()
+            NodeLoad.builder("not_filled").setMaxMemory(TEST_JOB_SIZE + PER_NODE_OVERHEAD).setMaxJobs(10).setUseMemory(true).build()
         );
         MlAutoscalingDeciderService service = buildService();
         service.setMaxMachineMemoryPercent(25);
@@ -819,25 +910,25 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
             0,
             0,
             nodesWithRoom,
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
+            List.of(),
+            List.of(),
+            List.of(),
             List.of("foo", "bar", "baz"),
             null,
             NativeMemoryCapacity.ZERO,
             reasonBuilder
         );
         assertTrue(decision.isPresent());
-        assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo((DEFAULT_JOB_SIZE + OVERHEAD) * 4));
-        assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(4 * (DEFAULT_JOB_SIZE + OVERHEAD)));
+        assertThat(decision.get().requiredCapacity().node().memory().getBytes(), equalTo((TEST_JOB_SIZE + PER_NODE_OVERHEAD) * 4));
+        assertThat(decision.get().requiredCapacity().total().memory().getBytes(), equalTo(4 * (TEST_JOB_SIZE + PER_NODE_OVERHEAD)));
         assertFalse(
             service.checkForScaleUp(
                 1,
                 0,
                 nodesWithRoom,
-                Collections.emptyList(),
-                Collections.emptyList(),
-                Collections.emptyList(),
+                List.of(),
+                List.of(),
+                List.of(),
                 List.of("foo", "bar"),
                 null,
                 NativeMemoryCapacity.ZERO,
@@ -847,60 +938,118 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
     }
 
     public void testScaleDown() {
-        List<NodeLoad> nodeLoads = Arrays.asList(
-            NodeLoad.builder("foo")
-                .setMaxMemory(DEFAULT_NODE_SIZE)
-                .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes())
-                .build(),
-            NodeLoad.builder("bar")
-                .setMaxMemory(DEFAULT_NODE_SIZE)
-                .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes())
-                .build(),
-            NodeLoad.builder("baz")
-                .setMaxMemory(DEFAULT_NODE_SIZE)
-                .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes())
-                .build()
-        );
-
+        when(nodeAvailabilityZoneMapper.getNumMlAvailabilityZones()).thenReturn(OptionalInt.of(3));
         MlAutoscalingDeciderService service = buildService();
         service.setMaxMachineMemoryPercent(25);
         MlScalingReason.Builder reasonBuilder = new MlScalingReason.Builder().setPassedConfiguration(Settings.EMPTY)
             .setCurrentMlCapacity(AutoscalingCapacity.ZERO);
-        {// Current capacity allows for smaller node
+        { // Current capacity allows for smaller node
+            List<NodeLoad> nodeLoads = List.of(
+                NodeLoad.builder("foo")
+                    .setMaxMemory(ByteSizeValue.ofGb(5).getBytes())
+                    .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                    .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes() - PER_NODE_OVERHEAD)
+                    .incNumAssignedJobs()
+                    .build(),
+                NodeLoad.builder("bar")
+                    .setMaxMemory(ByteSizeValue.ofGb(5).getBytes())
+                    .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                    .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes() - PER_NODE_OVERHEAD)
+                    .incNumAssignedJobs()
+                    .build(),
+                NodeLoad.builder("baz")
+                    .setMaxMemory(ByteSizeValue.ofGb(5).getBytes())
+                    .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                    .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofGb(1).getBytes() - PER_NODE_OVERHEAD)
+                    .incNumAssignedJobs()
+                    .build()
+            );
             Optional<AutoscalingDeciderResult> result = service.checkForScaleDown(
                 nodeLoads,
-                ByteSizeValue.ofMb(100).getBytes(),
-                new NativeMemoryCapacity(ByteSizeValue.ofGb(3).getBytes(), ByteSizeValue.ofGb(1).getBytes()),
+                ByteSizeValue.ofGb(1).getBytes() - PER_NODE_OVERHEAD,
+                new NativeMemoryCapacity(
+                    ByteSizeValue.ofGb(15).getBytes() - 3 * PER_NODE_OVERHEAD,
+                    ByteSizeValue.ofGb(5).getBytes() - PER_NODE_OVERHEAD
+                ),
                 reasonBuilder
             );
             assertThat(result.isEmpty(), is(false));
             AutoscalingDeciderResult autoscalingDeciderResult = result.get();
             assertThat(
                 autoscalingDeciderResult.requiredCapacity().node().memory().getBytes(),
-                equalTo((ByteSizeValue.ofMb(100).getBytes() + OVERHEAD) * 4)
+                equalTo(ByteSizeValue.ofGb(1).getBytes() * 4)
             );
             assertThat(autoscalingDeciderResult.requiredCapacity().total().memory().getBytes(), equalTo(ByteSizeValue.ofGb(12).getBytes()));
         }
-        {// Current capacity allows for smaller tier
+        { // Current capacity allows for smaller tier
+            List<NodeLoad> nodeLoads = List.of(
+                NodeLoad.builder("foo")
+                    .setMaxMemory(ByteSizeValue.ofGb(1).getBytes())
+                    .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                    .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofMb(100).getBytes() - PER_NODE_OVERHEAD)
+                    .incNumAssignedJobs()
+                    .build(),
+                NodeLoad.builder("bar")
+                    .setMaxMemory(ByteSizeValue.ofGb(1).getBytes())
+                    .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                    .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofMb(100).getBytes() - PER_NODE_OVERHEAD)
+                    .incNumAssignedJobs()
+                    .build(),
+                NodeLoad.builder("baz")
+                    .setMaxMemory(ByteSizeValue.ofGb(1).getBytes())
+                    .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                    .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofMb(100).getBytes() - PER_NODE_OVERHEAD)
+                    .incNumAssignedJobs()
+                    .build()
+            );
             Optional<AutoscalingDeciderResult> result = service.checkForScaleDown(
                 nodeLoads,
-                ByteSizeValue.ofMb(100).getBytes(),
-                new NativeMemoryCapacity(ByteSizeValue.ofGb(4).getBytes(), ByteSizeValue.ofGb(1).getBytes()),
+                ByteSizeValue.ofMb(100).getBytes() - PER_NODE_OVERHEAD,
+                new NativeMemoryCapacity(
+                    ByteSizeValue.ofGb(3).getBytes() - 3 * PER_NODE_OVERHEAD,
+                    ByteSizeValue.ofGb(1).getBytes() - PER_NODE_OVERHEAD
+                ),
                 reasonBuilder
             );
             assertThat(result.isEmpty(), is(false));
             AutoscalingDeciderResult autoscalingDeciderResult = result.get();
             assertThat(
                 autoscalingDeciderResult.requiredCapacity().node().memory().getBytes(),
-                equalTo((ByteSizeValue.ofMb(100).getBytes() + OVERHEAD) * 4)
+                equalTo(ByteSizeValue.ofMb(100).getBytes() * 4)
             );
-            assertThat(autoscalingDeciderResult.requiredCapacity().total().memory().getBytes(), equalTo(ByteSizeValue.ofGb(12).getBytes()));
+            assertThat(
+                autoscalingDeciderResult.requiredCapacity().total().memory().getBytes(),
+                equalTo(ByteSizeValue.ofMb(100).getBytes() * 12)
+            );
         }
-        {// Scale down is not really possible
+        { // Scale down is not really possible
+            List<NodeLoad> nodeLoads = List.of(
+                NodeLoad.builder("foo")
+                    .setMaxMemory(ByteSizeValue.ofMb(100).getBytes())
+                    .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                    .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofMb(100).getBytes() - PER_NODE_OVERHEAD)
+                    .incNumAssignedJobs()
+                    .build(),
+                NodeLoad.builder("bar")
+                    .setMaxMemory(ByteSizeValue.ofMb(100).getBytes())
+                    .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                    .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofMb(100).getBytes() - PER_NODE_OVERHEAD)
+                    .incNumAssignedJobs()
+                    .build(),
+                NodeLoad.builder("baz")
+                    .setMaxMemory(ByteSizeValue.ofMb(100).getBytes())
+                    .incAssignedNativeCodeOverheadMemory(PER_NODE_OVERHEAD)
+                    .incAssignedAnomalyDetectorMemory(ByteSizeValue.ofMb(100).getBytes() - PER_NODE_OVERHEAD)
+                    .incNumAssignedJobs()
+                    .build()
+            );
             Optional<AutoscalingDeciderResult> result = service.checkForScaleDown(
                 nodeLoads,
-                ByteSizeValue.ofMb(100).getBytes(),
-                new NativeMemoryCapacity(ByteSizeValue.ofGb(3).getBytes(), ByteSizeValue.ofMb(100).getBytes()),
+                ByteSizeValue.ofMb(100).getBytes() - PER_NODE_OVERHEAD,
+                new NativeMemoryCapacity(
+                    ByteSizeValue.ofMb(300).getBytes() - 3 * PER_NODE_OVERHEAD,
+                    ByteSizeValue.ofMb(100).getBytes() - PER_NODE_OVERHEAD
+                ),
                 reasonBuilder
             );
             assertThat(result.isEmpty(), is(true));
@@ -982,29 +1131,30 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
             assignedAnomalyJobs,
             batchAnomalyJobs,
             assignedAnalyticsJobs,
-            waitingAnomalyJobs ? randomList(1, maxWaitingAnomaly, () -> randomAlphaOfLength(10)) : Collections.emptyList(),
-            waitingAnalytics ? randomList(1, maxWaitingAnalytics, () -> randomAlphaOfLength(10)) : Collections.emptyList()
+            waitingAnomalyJobs ? randomList(1, maxWaitingAnomaly, () -> randomAlphaOfLength(10)) : List.of(),
+            waitingAnalytics ? randomList(1, maxWaitingAnalytics, () -> randomAlphaOfLength(10)) : List.of()
         );
 
+        Collection<DiscoveryNode> nodesInCluster = clusterState.getNodes().getNodes().values();
         Optional<NativeMemoryCapacity> nativeMemoryCapacity = service.calculateFutureAvailableCapacity(
             clusterState.metadata().custom(PersistentTasksCustomMetadata.TYPE),
-            Duration.ofMillis(10),
-            clusterState.getNodes().mastersFirstStream().collect(Collectors.toList()),
+            Duration.ofMillis(randomIntBetween(1, 10000)), // exact value shouldn't matter
+            nodesInCluster,
             clusterState
         );
         assertThat(nativeMemoryCapacity.isEmpty(), is(false));
-        assertThat(nativeMemoryCapacity.get().getNodeMlNativeMemoryRequirement(), greaterThanOrEqualTo(DEFAULT_JOB_SIZE));
+        assertThat(nativeMemoryCapacity.get().getNodeMlNativeMemoryRequirementExcludingOverhead(), greaterThanOrEqualTo(TEST_JOB_SIZE));
         assertThat(
-            nativeMemoryCapacity.get().getNodeMlNativeMemoryRequirement(),
-            lessThanOrEqualTo(NativeMemoryCalculator.allowedBytesForMl(DEFAULT_NODE_SIZE, 20, true))
+            nativeMemoryCapacity.get().getNodeMlNativeMemoryRequirementExcludingOverhead(),
+            lessThanOrEqualTo(ML_MEMORY_FOR_TEST_NODE_SIZE)
         );
         assertThat(
-            nativeMemoryCapacity.get().getTierMlNativeMemoryRequirement(),
-            greaterThanOrEqualTo(DEFAULT_JOB_SIZE * (assignedAnalyticsJobs.size() + batchAnomalyJobs.size()))
+            nativeMemoryCapacity.get().getTierMlNativeMemoryRequirementExcludingOverhead(),
+            greaterThanOrEqualTo(TEST_JOB_SIZE * (assignedAnalyticsJobs.size() + batchAnomalyJobs.size()))
         );
         assertThat(
-            nativeMemoryCapacity.get().getTierMlNativeMemoryRequirement(),
-            lessThanOrEqualTo(3 * (NativeMemoryCalculator.allowedBytesForMl(DEFAULT_NODE_SIZE, 20, true)))
+            nativeMemoryCapacity.get().getTierMlNativeMemoryRequirementExcludingOverhead(),
+            lessThanOrEqualTo(nodesInCluster.size() * (ML_MEMORY_FOR_TEST_NODE_SIZE - NATIVE_EXECUTABLE_CODE_OVERHEAD.getBytes()))
         );
     }
 
@@ -1021,8 +1171,8 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
             randomList(0, 2, () -> randomAlphaOfLength(10)),
             randomList(0, 2, () -> randomAlphaOfLength(10)),
             randomList(0, 2, () -> randomAlphaOfLength(10)),
-            waitingAnomalyJobs ? randomList(1, maxWaitingAnomaly, () -> randomAlphaOfLength(10)) : Collections.emptyList(),
-            waitingAnalytics ? randomList(1, maxWaitingAnalytics, () -> randomAlphaOfLength(10)) : Collections.emptyList()
+            waitingAnomalyJobs ? randomList(1, maxWaitingAnomaly, () -> randomAlphaOfLength(10)) : List.of(),
+            waitingAnalytics ? randomList(1, maxWaitingAnalytics, () -> randomAlphaOfLength(10)) : List.of()
         );
 
         Settings settings = Settings.builder()
@@ -1042,24 +1192,24 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
     }
 
     private MlAutoscalingDeciderService buildService() {
-        return new MlAutoscalingDeciderService(nodeLoadDetector, settings, clusterService, timeSupplier);
+        return new MlAutoscalingDeciderService(nodeLoadDetector, settings, nodeAvailabilityZoneMapper, clusterService, timeSupplier);
     }
 
     private static ClusterState clusterState(
-        List<String> anomalyTasks,
+        List<String> ongoingAnomalyTasks,
         List<String> batchAnomalyTasks,
         List<String> analyticsTasks,
         List<String> waitingAnomalyTasks,
         List<String> waitingAnalyticsTasks
     ) {
-        List<String> nodeNames = Arrays.asList("_node_id1", "_node_id2", "_node_id3");
+        List<String> nodeNames = List.of("_node_id1", "_node_id2", "_node_id3");
         List<DiscoveryNode> nodeList = withMlNodes(nodeNames.toArray(String[]::new));
         DiscoveryNodes.Builder nodesBuilder = DiscoveryNodes.builder();
         for (DiscoveryNode node : nodeList) {
             nodesBuilder.add(node);
         }
         PersistentTasksCustomMetadata.Builder tasksBuilder = PersistentTasksCustomMetadata.builder();
-        for (String jobId : anomalyTasks) {
+        for (String jobId : ongoingAnomalyTasks) {
             OpenJobPersistentTasksExecutorTests.addJobTask(
                 jobId,
                 randomFrom(nodeNames),
@@ -1119,15 +1269,17 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
                 n -> new DiscoveryNode(
                     n,
                     buildNewFakeTransportAddress(),
-                    MapBuilder.<String, String>newMapBuilder()
-                        .put(MachineLearning.MACHINE_MEMORY_NODE_ATTR, String.valueOf(DEFAULT_NODE_SIZE))
-                        .put(MachineLearning.MAX_JVM_SIZE_NODE_ATTR, String.valueOf(DEFAULT_JVM_SIZE))
-                        .map(),
+                    Map.of(
+                        MachineLearning.MACHINE_MEMORY_NODE_ATTR,
+                        String.valueOf(TEST_NODE_SIZE),
+                        MachineLearning.MAX_JVM_SIZE_NODE_ATTR,
+                        String.valueOf(TEST_JVM_SIZE)
+                    ),
                     Set.of(DiscoveryNodeRole.ML_ROLE),
                     Version.CURRENT
                 )
             )
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public static void addAnalyticsTask(
@@ -1213,16 +1365,12 @@ public class MlAutoscalingDeciderServiceTests extends ESTestCase {
             new DiscoveryNode(
                 "node",
                 ESTestCase.buildNewFakeTransportAddress(),
-                MapBuilder.<String, String>newMapBuilder()
-                    .put(MAX_JVM_SIZE_NODE_ATTR, jvmSize.toString())
-                    .put(MACHINE_MEMORY_NODE_ATTR, nodeSize.toString())
-                    .map(),
+                Map.of(MAX_JVM_SIZE_NODE_ATTR, jvmSize.toString(), MACHINE_MEMORY_NODE_ATTR, nodeSize.toString()),
                 Set.of(DiscoveryNodeRole.ML_ROLE),
                 Version.CURRENT
             ),
-            30,
+            0, // passing 0 proves auto is used
             true
         ).orElseThrow();
     }
-
 }
